Mise à jour du plateau de jeu

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Jeu du Serpent</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jeu du serpent</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <div id="game-board"></div>
-    <button id="roll-dice">Lancer le dé</button>
     <div id="message"></div>
-    <script src="./app.js"></script>
-  </body>
+    <button id="roll-dice">Lancer le dé</button>
+    <script type="module" src="./app.js"></script>
+</body>
 </html>
